--- a/Portfolio.html
+++ b/Portfolio.html
@@ -36,7 +36,7 @@
                 <img src="images/art-maps.png" alt="" class="draggable" id="image1" style="left: 50px; top: 70px; transform: rotate(-4deg); width: auto; height: 350px;">
                 <img src="images/borders-maps.png" alt="" class="draggable" id="image2" style="left: 700px; top: 220px; transform: rotate(-2deg); width: auto; height: 150px;">
                 <img src="images/PCA_layout.jpg" alt="" class="draggable" id="image6" style="left: 800px; top: 60px; transform: rotate(12deg); width: auto; height: 200px;">
-                <img src="images/ClarkPoster.png" alt="" class="draggable" id="image3" style="left: 600px; top: 370px; width: 200px; height: auto;">
+                <img src="images/ClarkPoster.jpg" alt="" class="draggable" id="image3" style="left: 600px; top: 370px; width: 200px; height: auto;">
                 <img src="images/density-overlay.jpg" alt="" class="draggable" id="image4" style="left: 100px; top: 400px; transform: rotate(5deg); width: auto; height: 220px;">
                 <img src="images/pictorial-map.png" alt="" class="draggable" id="image7" style="left: 220px; top: 450px; transform: rotate(-3deg); width: auto; height: 180px;">
             </div>
