--- a/Educator.html
+++ b/Educator.html
@@ -7,7 +7,7 @@
     <title>Alyssa Sklar - Home - Educator</title>
 </head>
 <body>
-    <a href="#main-content">Skip to Main Content</a>
+    <a href="#main-content" class="skip-line">Skip to Main Content</a>
     <header>
             <h1>Alyssa Sklar</h1>
         <nav>
@@ -27,6 +27,69 @@
     </header>
     <main id="main-content">
         <h2 id="about">Educator</h2>
+        <section class="desc">
+            <p>Alyssa is very passionate about teaching GIS, Programming, and Statistics in the context of Geography, 
+                Environmental Sciences, and Urban Planning. She believes that knowledge is not solely developed in a classroom, 
+                that inclusive teaching must disrupt power dynamics, we must center anti-racist and decolonizing pedagogy, and that 
+                critical thinking is the biggest takeaway from all learning.</p>
+
+            <p>Alyssa actively seeks to learn alternative strategies to teaching and assessment in higher education, especially related to technology.</p>
+        </section>
+
+        <div class="grid-container">
+            <div class="content-section">
+            <img class="grad" src="images/CIGLR.png" alt="Cooperative Institute for Great Lakes Research logo">
+            <div class="text-content">
+                <h2>Engagement, Career Training, and Outreach (ECO) Program Award Recipient</h2>
+                <p>Funded project to develop user-friendly GIS curriculum for the University of Michigan's Earth Camp, the Earth and Environmental 
+                    Sciences high-school outreach program for college-bound underrepresented minority students in the Environmental Sciences. Modules 
+                    focus on the basics of Esri ArcGIS through mapping exercises exploring Great Lakes environmental issues being studied by CIGLR with a 
+                    focus on environmental justice.</p>
+
+                <p>Funding for this project was provided by the University of Michigan Cooperative Institute for Great 
+                    Lakes Research (CIGLR), through the National Oceanic and Atmospheric Administration (NOAA) Cooperative Agreement NA22OAR4320150. This is CIGLR contribution $7,982.</p>
+            </div>
+            </div>
+        </div>
+
+        <div class="grid-container">
+            <div class="content-section">
+            <img class="grad" src="images/crlt.png" alt="Center for Research on Learning & Teaching logo">
+            <div class="text-content">
+                <h2>Graduate Teaching Certificate (GTC)</h2>
+                <p>Alyssa is working towards a GTC at the University of Michigan to learn and apply equitable teaching practices as a college-level instructor.</p>
+            </div>
+            </div>
+        </div>
+
+        <h2 id="courses">Teaching Experience</h2>
+        <div id="courses" class="grid-container">
+            <div class="teaching-experience-item">
+                <h3>Introduction to Statistics and Data Analysis</h3>
+                <img src="images/SI544.png" alt="">
+                <h4>Graduate Student Instructor, University of Michigan</h4>
+            </div>
+            <div class="teaching-experience-item">
+                <h3>Introduction to GIS in the Earth and Environmental Sciences</h3>
+                <img src="images/EARTH408.jpeg" alt="">
+                <h4>Graduate Student Instructor, University of Michigan</h4>
+            </div>
+            <div class="teaching-experience-item">
+                <h3>Spatial Analysis for Sustainability</h3>
+                <img src="images/GEO345.jpeg" alt="">
+                <h4>Teaching Assistant, DePaul University</h4>
+            </div>
+            <div class="teaching-experience-item">
+                <h3>Programming in Python for GIS</h3>
+                <img src="images/GEO_Python.png" alt="">
+                <h4>Teaching Assistant, DePaul University</h4>
+            </div>
+            <div class="teaching-experience-item">
+                <h3>Community GIS</h3>
+                <img src="images/CommunityGIS.png" alt="">
+                <h4>Teaching Assistant, DePaul University</h4>
+            </div>
+        </div>
     </main>
 </body>
 </html>
