--- a/GraduateStudent.html
+++ b/GraduateStudent.html
@@ -7,7 +7,7 @@
     <title>Alyssa Sklar - Home - Graduate Student</title>
 </head>
 <body>
-    <a href="#main-content">Skip to Main Content</a>
+    <a href="#main-content" class="skip-line">Skip to Main Content</a>
     <header>
             <h1>Alyssa Sklar</h1>
         <nav>
@@ -38,7 +38,7 @@
 
         <div class="grid-container">
             <div class="content-section">
-            <img class="grad" src="images/pictorial-presentation.png" alt="">
+            <img class="grad" src="images/pictorial-presentation.png" alt="Presenation slide including a collage of pictorial maps">
             <div class="text-content">
                 <h2>Identifying Subtextual Narratives in Pictorial Maps</h2>
                 <p>Alyssa analyzed pictorial maps depicting the United States from the 1920-1960s to
@@ -52,7 +52,7 @@
 
         <div class="grid-container">
             <div class="content-section">
-            <img class="grad" src="images/ebike.png" alt="">
+            <img class="grad" src="images/ebike.png" alt="Promotional flyer of E-bike against a garage with QR code">
             <div class="text-content">
                 <h2>E-Bike Access and Sustainability</h2>
                 <p>She is a Research Assistant at U-M Flint's Geography, Planning, and Environment Department
@@ -65,7 +65,7 @@
 
         <div class="grid-container">
             <div class="content-section">
-            <img class="grad" src="images/DPW.jpeg" alt="">
+            <img class="grad" src="images/DPW.jpeg" alt="Photograph of 5 team members and 2 employees of the City of Dearborn's Department of Pulic Works">
             <div class="text-content">
                 <h2>Aiding in Civil Technology</h2>
                 <p>Alyssa supported the development of a civic technology tool to aid in government transparency
@@ -76,7 +76,7 @@
 
         <div class="grid-container">
             <div class="content-section">
-            <img class="grad" src="images/UTC.jpeg" alt="">
+            <img class="grad" src="images/UTC.jpeg" alt="Photograph of 4 team members standing outside of the Dana Building at the University of Michigan">
             <div class="text-content">
                 <h2>Characterizing the Urban Tree Canopy</h2>
                 <p>Alyssa's Master's Project at the School for Environment and Sustainability partnered with the City
