--- a/cv.html
+++ b/cv.html
@@ -27,6 +27,6 @@
     </header>
 </body>
 <main id="main-content">
-    <object data="data/alyssa-sklar_nov2023_CV.pdf" width="100%" height="900px"></object>
+    <object data="data/amsklar_CV_Dec2023.pdf" width="100%" height="900px"></object>
 </main>
 </html>
