--- a/Home.html
+++ b/Home.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alyssa Sklar - Home</title>
 </head>
 <body>
-    <a href="#main-content">Skip to Main Content</a>
+    <a href="#main-content" class="skip-line">Skip to Main Content</a>
     <header>
             <h1>Alyssa Sklar</h1>
         <nav>
