--- a/Portfolio.html
+++ b/Portfolio.html
@@ -7,7 +7,7 @@
     <title>Alyssa Sklar - Portfolio</title>
 </head>
 <body>
-    <a href ="#main-content">Skip to Main Content</a>
+    <a href="#main-content" class="skip-line">Skip to Main Content</a>
     <header>
             <h1>Alyssa Sklar</h1>
         <nav>
@@ -31,14 +31,20 @@
     <div class="portfolio-body">
         <div id="container">
             <div id="image-container">
+                <img src="images/Beverly_Building.jpg" alt="" class="draggable" id="image7" style="left: 300px; top: 20px; transform: rotate(-2deg); width: auto; height: 200px;">
                 <img src="images/travel-maps.jpg" alt="" class="draggable" id="image8" style="left: 500px; top: 60px; transform: rotate(8deg); width: auto; height: 275px;">
-                <img src="images/evapotranspiration.jpg" alt="" class="draggable" id="image5" style="left: 260px; top: 200px; transform: rotate(7deg); width: auto; height: 300px;">
                 <img src="images/art-maps.png" alt="" class="draggable" id="image1" style="left: 50px; top: 70px; transform: rotate(-4deg); width: auto; height: 350px;">
-                <img src="images/borders-maps.png" alt="" class="draggable" id="image2" style="left: 700px; top: 220px; transform: rotate(-2deg); width: auto; height: 150px;">
-                <img src="images/PCA_layout.jpg" alt="" class="draggable" id="image6" style="left: 800px; top: 60px; transform: rotate(12deg); width: auto; height: 200px;">
-                <img src="images/ClarkPoster.jpg" alt="" class="draggable" id="image3" style="left: 600px; top: 370px; width: 200px; height: auto;">
+                <img src="images/evapotranspiration.jpg" alt="" class="draggable" id="image5" style="left: 260px; top: 200px; transform: rotate(7deg); width: auto; height: 300px;">
+                <img src="images/environmental-prevention.png" alt="" class="draggable" id="image7" style="left: 550px; top: 420px; width: auto; height: 200px;">
+
+                <img src="images/borders-maps.png" alt="" class="draggable" id="image2" style="left: 700px; top: 220px; transform: rotate(-2deg); width: auto; height: 190px;">
+                <img src="images/PCA_layout.jpg" alt="" class="draggable" id="image6" style="left: 760px; top: 60px; transform: rotate(12deg); width: auto; height: 200px;">
                 <img src="images/density-overlay.jpg" alt="" class="draggable" id="image4" style="left: 100px; top: 400px; transform: rotate(5deg); width: auto; height: 220px;">
                 <img src="images/pictorial-map.png" alt="" class="draggable" id="image7" style="left: 220px; top: 450px; transform: rotate(-3deg); width: auto; height: 180px;">
+                <img src="images/BartonDam.jpg" alt="" class="draggable" id="image7" style="left: 970px; top: 50px; transform: rotate(-3deg); width: auto; height: 200px;">
+                <img src="images/ChicagoHouseholdjpg.jpg" alt="" class="draggable" id="image7" style="left: 875px; top: 295px; width: auto; height: 200px;">
+                <img src="images/multiband.jpg" alt="" class="draggable" id="image7" style="left: 1050px; top: 250px; transform: rotate(6deg); width: auto; height: 180px;">
+                <img src="images/ClarkPoster.jpg" alt="" class="draggable" id="image3" style="left: 1000px; top: 380px; transform: rotate(-6deg); width: 200px; height: auto;">
             </div>
         </div>
     </div>
