--- a/GraduateStudent.html
+++ b/GraduateStudent.html
@@ -7,7 +7,7 @@
     <title>Alyssa Sklar - Home - Graduate Student</title>
 </head>
 <body>
-    <a href="#main-content" class="skip-line">Skip to Main Content</a>
+    <a class="skip-link" href="#main-content">Skip to main content</a>
     <header>
             <h1>Alyssa Sklar</h1>
         <nav>
@@ -26,12 +26,12 @@
         </nav>
     </header>
     <main id="main-content">
-        <h2 id="about">Graduate Student</h2>
+        <h2 id="about" tabindex="1">Graduate Student</h2>
         <section class="desc">
-            <p>Alyssa is a dual-degree master's student at the University of Michigan studying at the School of Information 
+            <p tabindex="2">Alyssa is a dual-degree master's student at the University of Michigan studying at the School of Information 
                 with a focus in Digital Curation and at the School for Environment and Sustainability with a focus in Geospatial Data Sciences.</p>
 
-            <p>Her research interests center around characterizing the built and natural environment to aid in community-based solutions for urban 
+            <p tabindex="3">Her research interests center around characterizing the built and natural environment to aid in community-based solutions for urban 
                 sustainability and climate resiliency. She is particularly interested in the access and distribution of greenspace and active transportation 
                 as well as the reflection of social ideologies on citizen decision making within urban space.</p>
         </section>
@@ -40,8 +40,8 @@
             <div class="content-section">
             <img class="grad" src="images/pictorial-presentation.png" alt="Presenation slide including a collage of pictorial maps">
             <div class="text-content">
-                <h2>Identifying Subtextual Narratives in Pictorial Maps</h2>
-                <p>Alyssa analyzed pictorial maps depicting the United States from the 1920-1960s to
+                <h2 tabindex="4">Identifying Subtextual Narratives in Pictorial Maps</h2>
+                <p tabindex="5">Alyssa analyzed pictorial maps depicting the United States from the 1920-1960s to
                     understand how they reflect and sustain political, economic, cultural, and social dynamics
                     through symbology to identify subtextual narratives related to cultural caricaturization,
                     capitalism and consumerism, American nationalism, enclosure and dispossession of land and exploitation
@@ -54,8 +54,8 @@
             <div class="content-section">
             <img class="grad" src="images/ebike.png" alt="Promotional flyer of E-bike against a garage with QR code">
             <div class="text-content">
-                <h2>E-Bike Access and Sustainability</h2>
-                <p>She is a Research Assistant at U-M Flint's Geography, Planning, and Environment Department
+                <h2 tabindex="6">E-Bike Access and Sustainability</h2>
+                <p tabindex="7">She is a Research Assistant at U-M Flint's Geography, Planning, and Environment Department
                     where she investigates e-bike safety, accessibility, and mobility of the metro Detroit
                      area in: "The e-bike boom: Examining key safety factors on e-bike potential to promote
                      sustainability and equity in Detroit.”</p>
@@ -67,8 +67,8 @@
             <div class="content-section">
             <img class="grad" src="images/DPW.jpeg" alt="Photograph of 5 team members and 2 employees of the City of Dearborn's Department of Pulic Works">
             <div class="text-content">
-                <h2>Aiding in Civil Technology</h2>
-                <p>Alyssa supported the development of a civic technology tool to aid in government transparency
+                <h2 tabindex="8">Aiding in Civil Technology</h2>
+                <p tabindex="9">Alyssa supported the development of a civic technology tool to aid in government transparency
                      for residents of Dearborn, Michigan collaborating with the City of Dearborn's Department of Public Works.</p>
             </div>
             </div>
@@ -78,8 +78,8 @@
             <div class="content-section">
             <img class="grad" src="images/UTC.jpeg" alt="Photograph of 4 team members standing outside of the Dana Building at the University of Michigan">
             <div class="text-content">
-                <h2>Characterizing the Urban Tree Canopy</h2>
-                <p>Alyssa's Master's Project at the School for Environment and Sustainability partnered with the City
+                <h2 tabindex="10">Characterizing the Urban Tree Canopy</h2>
+                <p tabindex="11">Alyssa's Master's Project at the School for Environment and Sustainability partnered with the City
                      of Ann Arbor's Office of Sustainability and Innovations and Environmental Commission to capture the
                      spatial distribution and composition of the urban tree canopy, identify turfgrass, delineate native forest
                       fragments, and inform land stewardship practices.</p>
