--- a/Portfolio.html
+++ b/Portfolio.html
@@ -7,7 +7,7 @@
     <title>Alyssa Sklar - Portfolio</title>
 </head>
 <body>
-    <a href="#main-content" class="skip-line">Skip to Main Content</a>
+    <a class="skip-link" href="#main-content">Skip to main content</a>
     <header>
             <h1>Alyssa Sklar</h1>
         <nav>
@@ -26,8 +26,8 @@
         </nav>
     </header>
 <main id="main-content">
-    <h2 id="about">Portfolio</h2>
-    <p class="port">to view an image click and drag or double-click to view at full screen</p>
+    <h2 id="about" tabindex="1">Portfolio</h2>
+    <p class="port" tabindex="2">to view an image click and drag or double-click to view at full screen</p>
     <div class="portfolio-body">
         <div id="container">
             <div id="image-container">
