--- a/cv.html
+++ b/cv.html
@@ -7,7 +7,7 @@
     <title>Alyssa Sklar</title>
 </head>
 <body>
-    <a href ="#main-content">Skip to Main Content</a>
+    <a class="skip-link" href="#main-content">Skip to main content</a>
     <header>
             <h1>Alyssa Sklar</h1>
         <nav>
