--- a/Educator.html
+++ b/Educator.html
@@ -12,7 +12,7 @@
             <h1>Alyssa Sklar</h1>
         <nav>
             <ul>
-                <li class="dropdown">
+                <li class="dropdown" role="menu">
                     <a href="Home.html" class="dropbtn">Home &#9662;</a>
                     <div class="dropdown-content">
                         <a href="GraduateStudent.html">Graduate Student</a>
@@ -66,27 +66,27 @@
         <div id="courses" class="grid-container">
             <div class="teaching-experience-item">
                 <h3 tabindex="10">Introduction to Statistics and Data Analysis</h3>
-                <img src="images/SI544.png" alt="">
+                <img src="images/SI544.png" alt="linear model showing the relationship between defence and attack of Pokemon">
                 <h4 tabindex="11">Graduate Student Instructor, University of Michigan</h4>
             </div>
             <div class="teaching-experience-item">
                 <h3 tabindex="12">Introduction to GIS in the Earth and Environmental Sciences</h3>
-                <img src="images/EARTH408.jpeg" alt="">
+                <img src="images/EARTH408.jpeg" alt="Elevation profile of the Keweenw Peninsula in Michigan">
                 <h4 tabindex="13">Graduate Student Instructor, University of Michigan</h4>
             </div>
             <div class="teaching-experience-item">
                 <h3 tabindex="14">Spatial Analysis for Sustainability</h3>
-                <img src="images/GEO345.jpeg" alt="">
+                <img src="images/GEO345.jpeg" alt="Flowchart model for calculating site suitability in ArcGIS Pro">
                 <h4 tabindex="15">Teaching Assistant, DePaul University</h4>
             </div>
             <div class="teaching-experience-item">
                 <h3 tabindex="16">Programming in Python for GIS</h3>
-                <img src="images/GEO_Python.png" alt="">
+                <img src="images/GEO_Python.png" alt="Python code snippet using ArcPy library">
                 <h4 tabindex="17">Teaching Assistant, DePaul University</h4>
             </div>
             <div class="teaching-experience-item">
                 <h3 tabindex="18">Community GIS</h3>
-                <img src="images/CommunityGIS.png" alt="">
+                <img src="images/CommunityGIS.png" alt="StoryMap of Pullman Porter Descendants">
                 <h4 tabindex="19">Teaching Assistant, DePaul University</h4>
             </div>
         </div>
