--- a/Portfolio.html
+++ b/Portfolio.html
@@ -12,12 +12,12 @@
             <h1>Alyssa Sklar</h1>
         <nav>
             <ul>
-                <li class="dropdown">
+                <li class="dropdown" role="menu">
                     <a href="Home.html" class="dropbtn">Home &#9662;</a>
                     <div class="dropdown-content">
                         <a href="GraduateStudent.html">Graduate Student</a>
                         <a href="Educator.html">Educator</a>
-                        <!-- <a href="Librarian.html">Librarian</a> -->
+                        <!-- <a href="Librarian.html">Librarian</a> to be created -->
                     </div>
                 </li>
                 <li class = "active"><a href="Portfolio.html">Portfolio</a></li>
@@ -28,23 +28,25 @@
 <main id="main-content">
     <h2 id="about" tabindex="1">Portfolio</h2>
     <p class="port" tabindex="2">to view an image click and drag or double-click to view at full screen</p>
+    <div id="mobile-message">
+        Portfolio gallery unavailable on mobile devices
+    </div>
     <div class="portfolio-body">
         <div id="container">
             <div id="image-container">
-                <img src="images/Beverly_Building.jpg" alt="" class="draggable" id="image7" style="left: 300px; top: 20px; transform: rotate(-2deg); width: auto; height: 200px;">
-                <img src="images/travel-maps.jpg" alt="" class="draggable" id="image8" style="left: 500px; top: 60px; transform: rotate(8deg); width: auto; height: 275px;">
-                <img src="images/art-maps.png" alt="" class="draggable" id="image1" style="left: 50px; top: 70px; transform: rotate(-4deg); width: auto; height: 350px;">
-                <img src="images/evapotranspiration.jpg" alt="" class="draggable" id="image5" style="left: 260px; top: 200px; transform: rotate(7deg); width: auto; height: 300px;">
-                <img src="images/environmental-prevention.png" alt="" class="draggable" id="image7" style="left: 550px; top: 420px; width: auto; height: 200px;">
-
-                <img src="images/borders-maps.png" alt="" class="draggable" id="image2" style="left: 700px; top: 220px; transform: rotate(-2deg); width: auto; height: 190px;">
-                <img src="images/PCA_layout.jpg" alt="" class="draggable" id="image6" style="left: 760px; top: 60px; transform: rotate(12deg); width: auto; height: 200px;">
-                <img src="images/density-overlay.jpg" alt="" class="draggable" id="image4" style="left: 100px; top: 400px; transform: rotate(5deg); width: auto; height: 220px;">
-                <img src="images/pictorial-map.png" alt="" class="draggable" id="image7" style="left: 220px; top: 450px; transform: rotate(-3deg); width: auto; height: 180px;">
-                <img src="images/BartonDam.jpg" alt="" class="draggable" id="image7" style="left: 970px; top: 50px; transform: rotate(-3deg); width: auto; height: 200px;">
-                <img src="images/ChicagoHouseholdjpg.jpg" alt="" class="draggable" id="image7" style="left: 875px; top: 295px; width: auto; height: 200px;">
-                <img src="images/multiband.jpg" alt="" class="draggable" id="image7" style="left: 1050px; top: 250px; transform: rotate(6deg); width: auto; height: 180px;">
-                <img src="images/ClarkPoster.jpg" alt="" class="draggable" id="image3" style="left: 1000px; top: 380px; transform: rotate(-6deg); width: 200px; height: auto;">
+                <img src="images/Beverly_Building.jpg" alt="Map of building footprints according to the year built" class="draggable" style="left: 300px; top: 20px; transform: rotate(-2deg); width: auto; height: 200px;">
+                <img src="images/travel-maps.jpg" alt="Poster highlighting map open house entitled Are we there yet" class="draggable" style="left: 500px; top: 60px; transform: rotate(8deg); width: auto; height: 275px;">
+                <img src="images/art-maps.png" alt="Poster highlighting map open house entitled cARTography the artistry behind maps" class="draggable" style="left: 50px; top: 70px; transform: rotate(-4deg); width: auto; height: 350px;">
+                <img src="images/evapotranspiration.jpg" alt="Map showing minimum evapotranspiration of Springfield Township, Michigan" class="draggable"  style="left: 260px; top: 200px; transform: rotate(7deg); width: auto; height: 300px;">
+                <img src="images/environmental-prevention.png" alt="Graph of predictors variables and the estimate value" class="draggable" style="left: 550px; top: 420px; width: auto; height: 200px;">
+                <img src="images/borders-maps.png" alt="Poster highlighting map open house entitled Lines on the Land mapping Borders and boundaries" class="draggable" style="left: 700px; top: 220px; transform: rotate(-2deg); width: auto; height: 190px;">
+                <img src="images/PCA_layout.jpg" alt="Principal Component Analysis of satellite imagery of Chicago, Illinois" class="draggable" style="left: 760px; top: 60px; transform: rotate(12deg); width: auto; height: 200px;">
+                <img src="images/density-overlay.jpg" alt="Map of tree density in relation to household value" class="draggable" style="left: 100px; top: 400px; transform: rotate(5deg); width: auto; height: 220px;">
+                <img src="images/pictorial-map.png" alt="Collage of 13 pictorial maps making up the lower 48-states" class="draggable" style="left: 220px; top: 450px; transform: rotate(-3deg); width: auto; height: 180px;">
+                <img src="images/BartonDam.jpg" alt="Map of Barton Dam Ann Arbor, Michigan" class="draggable" style="left: 970px; top: 50px; transform: rotate(-3deg); width: auto; height: 200px;">
+                <img src="images/ChicagoHouseholdjpg.jpg" alt="Map of average household size in Chicago, Illinois" class="draggable"  style="left: 875px; top: 295px; width: auto; height: 200px;">
+                <img src="images/multiband.jpg" alt="Map showing healthy vegetation" class="draggable" style="left: 1050px; top: 250px; transform: rotate(6deg); width: auto; height: 180px;">
+                <img src="images/ClarkPoster.jpg" alt="Poster advertising the Clark Library" class="draggable" style="left: 1000px; top: 380px; transform: rotate(-6deg); width: 200px; height: auto;">
             </div>
         </div>
     </div>
