--- a/cv.html
+++ b/cv.html
@@ -12,7 +12,7 @@
             <h1>Alyssa Sklar</h1>
         <nav>
             <ul>
-                <li class="dropdown">
+                <li class="dropdown" role="menu">
                     <a href="Home.html" class="dropbtn">Home &#9662;</a>
                     <div class="dropdown-content">
                         <a href="GraduateStudent.html">Graduate Student</a>
