--- a/Home.html
+++ b/Home.html
@@ -39,9 +39,9 @@
 
         <section id="image-gallery">
             <div class="gallery">
-                <img src="images/alyssa-sklar-Clark.JPG" alt="">
-                <img src="images/alyssa-sklar.jpg" alt="">
-                <img src="images/alyssa-sklar-trees.jpg" alt="">
+                <img src="images/alyssa-sklar-Clark.JPG" alt="Alyssa Sklar standing next to a poster at a map open house at the Clark Library">
+                <img src="images/alyssa-sklar.jpg" alt="Headshot of Alyssa Sklar">
+                <img src="images/alyssa-sklar-trees.jpg" alt="Alyssa Sklar sitting on a rock at Shenandoah National Park">
 
             </div>
         </section>
