--- a/Educator.html
+++ b/Educator.html
@@ -27,27 +27,27 @@
         </nav>
     </header>
     <main id="main-content">
-        <h2 id="about" tabindex="1">Educator</h2>
+        <h2 id="about">Educator</h2>
         <section class="desc">
-            <p tabindex="2">Alyssa is very passionate about teaching GIS, Programming, and Statistics in the context of Geography, 
+            <p>Alyssa is very passionate about teaching GIS, Programming, and Statistics in the context of Geography, 
                 Environmental Sciences, and Urban Planning. She believes that knowledge is not solely developed in a classroom, 
                 that inclusive teaching must disrupt power dynamics, we must center anti-racist and decolonizing pedagogy, and that 
                 critical thinking is the biggest takeaway from all learning.</p>
 
-            <p tabindex="3">Alyssa actively seeks to learn alternative strategies to teaching and assessment in higher education, especially related to technology.</p>
+            <p>Alyssa actively seeks to learn alternative strategies to teaching and assessment in higher education, especially related to technology.</p>
         </section>
 
         <div class="grid-container">
             <div class="content-section">
             <img class="grad" src="images/CIGLR.png" alt="Cooperative Institute for Great Lakes Research logo">
             <div class="text-content">
-                <h2 tabindex="4">Engagement, Career Training, and Outreach (ECO) Program Award Recipient</h2>
-                <p tabindex="5">Funded project to develop user-friendly GIS curriculum for the University of Michigan's Earth Camp, the Earth and Environmental 
+                <h2>Engagement, Career Training, and Outreach (ECO) Program Award Recipient</h2>
+                <p>Funded project to develop user-friendly GIS curriculum for the University of Michigan's Earth Camp, the Earth and Environmental 
                     Sciences high-school outreach program for college-bound underrepresented minority students in the Environmental Sciences. Modules 
                     focus on the basics of Esri ArcGIS through mapping exercises exploring Great Lakes environmental issues being studied by CIGLR with a 
                     focus on environmental justice.</p>
 
-                <p tabindex="6">Funding for this project was provided by the University of Michigan Cooperative Institute for Great 
+                <p>Funding for this project was provided by the University of Michigan Cooperative Institute for Great 
                     Lakes Research (CIGLR), through the National Oceanic and Atmospheric Administration (NOAA) Cooperative Agreement NA22OAR4320150. This is CIGLR contribution $7,982.</p>
             </div>
             </div>
@@ -57,38 +57,38 @@
             <div class="content-section">
             <img class="grad" src="images/crlt.png" alt="Center for Research on Learning & Teaching logo">
             <div class="text-content">
-                <h2 tabindex="7">Graduate Teaching Certificate (GTC)</h2>
-                <p tabindex="8">Alyssa is working towards a GTC at the University of Michigan to learn and apply equitable teaching practices as a college-level instructor.</p>
+                <h2>Graduate Teaching Certificate (GTC)</h2>
+                <p>Alyssa is working towards a GTC at the University of Michigan to learn and apply equitable teaching practices as a college-level instructor.</p>
             </div>
             </div>
         </div>
 
-        <h2 id="courses" tabindex="9">Teaching Experience</h2>
+        <h2 id="courses">Teaching Experience</h2>
         <div id="courses" class="grid-container">
             <div class="teaching-experience-item">
-                <h3 tabindex="10">Introduction to Statistics and Data Analysis</h3>
+                <h3 >Introduction to Statistics and Data Analysis</h3>
                 <img src="images/SI544.png" alt="linear model showing the relationship between defence and attack of Pokemon">
-                <h4 tabindex="11">Graduate Student Instructor, University of Michigan</h4>
+                <h4>Graduate Student Instructor, University of Michigan</h4>
             </div>
             <div class="teaching-experience-item">
-                <h3 tabindex="12">Introduction to GIS in the Earth and Environmental Sciences</h3>
+                <h3>Introduction to GIS in the Earth and Environmental Sciences</h3>
                 <img src="images/EARTH408.jpeg" alt="Elevation profile of the Keweenw Peninsula in Michigan">
-                <h4 tabindex="13">Graduate Student Instructor, University of Michigan</h4>
+                <h4>Graduate Student Instructor, University of Michigan</h4>
             </div>
             <div class="teaching-experience-item">
-                <h3 tabindex="14">Spatial Analysis for Sustainability</h3>
+                <h3>Spatial Analysis for Sustainability</h3>
                 <img src="images/GEO345.jpeg" alt="Flowchart model for calculating site suitability in ArcGIS Pro">
-                <h4 tabindex="15">Teaching Assistant, DePaul University</h4>
+                <h4>Teaching Assistant, DePaul University</h4>
             </div>
             <div class="teaching-experience-item">
-                <h3 tabindex="16">Programming in Python for GIS</h3>
+                <h3>Programming in Python for GIS</h3>
                 <img src="images/GEO_Python.png" alt="Python code snippet using ArcPy library">
-                <h4 tabindex="17">Teaching Assistant, DePaul University</h4>
+                <h4>Teaching Assistant, DePaul University</h4>
             </div>
             <div class="teaching-experience-item">
-                <h3 tabindex="18">Community GIS</h3>
+                <h3>Community GIS</h3>
                 <img src="images/CommunityGIS.png" alt="StoryMap of Pullman Porter Descendants">
-                <h4 tabindex="19">Teaching Assistant, DePaul University</h4>
+                <h4>Teaching Assistant, DePaul University</h4>
             </div>
         </div>
     </main>
