--- a/Portfolio.html
+++ b/Portfolio.html
@@ -27,8 +27,8 @@
         </nav>
     </header>
 <main id="main-content">
-    <h2 id="about" tabindex="1">Portfolio</h2>
-    <p class="port" tabindex="2">to view an image click and drag or double-click to view at full screen</p>
+    <h2 id="about">Portfolio</h2>
+    <p class="port">to view an image click and drag or double-click to view at full screen</p>
     <div id="mobile-message">
         Portfolio gallery unavailable on mobile devices
     </div>
