--- a/Educator.html
+++ b/Educator.html
@@ -13,7 +13,7 @@
             <h1>Alyssa Sklar</h1>
         <nav>
             <ul>
-                <li class="dropdown" role="menu">
+                <li class="dropdown">
                     <a href="Home.html" class="dropbtn">Home &#9662;</a>
                     <div class="dropdown-content">
                         <a href="GraduateStudent.html">Graduate Student</a>
