--- a/cv.html
+++ b/cv.html
@@ -13,7 +13,7 @@
             <h1>Alyssa Sklar</h1>
         <nav>
             <ul>
-                <li class="dropdown" role="menu">
+                <li class="dropdown">
                     <a href="Home.html" class="dropbtn">Home &#9662;</a>
                     <div class="dropdown-content">
                         <a href="GraduateStudent.html">Graduate Student</a>
@@ -27,7 +27,9 @@
         </nav>
     </header>
 </body>
-<main id="main-content">
+<main id="CVcontent">
+    <h2 id="about">CV</h2>
+    <p>last updated December 2023</p>
     <object data="data/amsklar_CV_Dec2023.pdf" width="100%" height="900px"></object>
 </main>
 </html>
