--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,7 @@
     <title>Alyssa Sklar</title>
 </head>
 <body>
-    <a class="skip-link" href="#main-content">Skip to main content</a>
+    <a class="skip-link" href="#main-contentCV">Skip to main content</a>
     <header>
             <h1>Alyssa Sklar</h1>
         <nav>
@@ -27,9 +27,9 @@
         </nav>
     </header>
 </body>
-<main id="CVcontent">
+<main id="main-contentCV">
     <h2 id="about">CV</h2>
-    <p>last updated December 2023</p>
+    <p id="cv">last updated December 2023</p>
     <object data="data/amsklar_CV_Dec2023.pdf" width="100%" height="900px"></object>
 </main>
 </html>
