--- a/cv.html
+++ b/cv.html
@@ -30,6 +30,6 @@
 <main id="main-content">
     <h2 id="about">CV</h2>
     <p class="cv">last updated December 2023</p>
-    <object data="data/amsklar_CV_Dec2023.pdf" width="100%" height="900px"></object>
+    <object data="data/amsklar_CV_Dec2023.pdf" width="100%" height="900px" alt="pdf of CV"></object>
 </main>
 </html>
