--- a/Educator.html
+++ b/Educator.html
@@ -93,4 +93,17 @@
         </div>
     </main>
 </body>
+<footer>
+    <div class="footer-content">
+        <p>Created by Alyssa Sklar, 2024</p>
+        <div class="social-media-links">
+            <a href="https://www.linkedin.com/in/alyssasklar/" target="_blank" rel="noopener noreferrer">
+                <img src="images/linkedin-icon.png" alt="LinkedIn">
+            </a>
+            <a href="https://github.com/amsklar" target="_blank" rel="noopener noreferrer">
+                <img src="images/github-icon.png" alt="GitHub">
+            </a>
+        </div>
+    </div>
+</footer>
 </html>
