--- a/cv.html
+++ b/cv.html
@@ -29,7 +29,20 @@
 </body>
 <main id="main-content">
     <h2 id="about">CV</h2>
-    <p class="cv">last updated December 2023</p>
+    <p class="cv">last updated January 2024</p>
     <object data="data/amsklar_CV_Jan2024.pdf" width="100%" height="900px" role="application" aria-label="Curriculum Vitae" title="Curriculum Vitae"></object>
 </main>
+<footer>
+    <div class="footer-content">
+        <p>Created by Alyssa Sklar, 2024</p>
+        <div class="social-media-links">
+            <a href="https://www.linkedin.com/in/alyssasklar/" target="_blank" rel="noopener noreferrer">
+                <img src="images/linkedin-icon.png" alt="LinkedIn">
+            </a>
+            <a href="https://github.com/amsklar" target="_blank" rel="noopener noreferrer">
+                <img src="images/github-icon.png" alt="GitHub">
+            </a>
+        </div>
+    </div>
+</footer>
 </html>
